examples/test/testpolicy10757.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10757
  namespace: namespace262
spec:
  podSelector:
    matchLabels:
      key39: value8
      key40: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value12
          key20: value22
      podSelector:
        matchLabels:
          key32: value40
          key1: value27
